Fix unit test compilation to use JDK8-compatible library/method